--- a/src/style/banner2.scss
+++ b/src/style/banner2.scss
@@ -1,4 +1,4 @@
-.kasa-banner {
+.kasa-banner2 {
     width: auto;
     height: 223px;
     margin-left: 100px;
@@ -10,13 +10,6 @@
         height: 100%;
         border-radius: 25px;
         filter : brightness(60%);
-    }
-    h1{
-        text-align: center;
-        color: white;
-        position: relative;
-        margin: 0;
-        top: -125px;
     }
 
 }
