--- a/src/style/card.scss
+++ b/src/style/card.scss
@@ -1,19 +1,20 @@
 .kasa-card {
-    width: 340px;
+    min-width: 340px;
     height: 340px;
     border-radius: 10px;
-    padding-left: 10px;
-    padding-bottom: 50px;
+    margin-bottom: 50px;
 
     img {
         width: 340px;
         height: 340px;
         border-radius: 10px;
     }
-    h4{
+
+    h4 {
         position: relative;
         bottom: 67px;
         left: 5px;
         color: white;
+        max-width: 340px;
     }
 }
