--- a/src/style/cardsection.scss
+++ b/src/style/cardsection.scss
@@ -5,6 +5,10 @@
     margin-right: 100px;
     margin-top: 50px;
     padding-top: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
