finition du design et du responsive

--- a/src/style/cardsection.scss
+++ b/src/style/cardsection.scss
@@ -1,8 +1,8 @@
 .kasa-cardsection{
     background-color: #F6F6F6;
     border-radius: 25px;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 8vw;
+    margin-right: 8vw;
     margin-top: 50px;
     padding-top: 50px;
     padding-left: 10px;
