--- a/src/style/banner.scss
+++ b/src/style/banner.scss
@@ -1,8 +1,8 @@
 .kasa-banner {
     width: auto;
     height: 223px;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 8vw;
+    margin-right: 8vw;
     margin-top: 50px;
 
     img {
